<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.homepage.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg_logo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:src="@drawable/bg_game_decider_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:background="@drawable/bg_rect_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/normal"
                android:layout_marginEnd="@dimen/small_to_normal"
                android:layout_marginBottom="@dimen/normal"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_to_normal"
                android:layout_marginEnd="@dimen/normal"
                android:backgroundTint="@color/colorWhite"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/about_me"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:theme="@style/Theme.MaterialComponents"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/best_game_in_2020"
            android:textColor="@color/colorBlackNormal"
            android:textSize="@dimen/text_ultra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_about" />

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/very_small"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:background="@color/colorBlackLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line"
            tools:listitem="@layout/item_games" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/huge"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/version_1_0"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_list_games" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/powered_by_johannes_christian"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_version" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>