<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/small_to_normal"
    android:paddingTop="@dimen/small_to_normal"
    android:paddingBottom="@dimen/very_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_rect_home"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_game_poster"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bg_harvest_moon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toEndOf="@id/iv_game_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/game_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_game_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/very_small"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toEndOf="@id/iv_game_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title"
            tools:text="@string/game_genre" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_see_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginBottom="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/see_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_game_poster" />

        <ImageView
            android:id="@+id/iv_next_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_to_small"
            android:layout_marginBottom="14dp"
            android:padding="@dimen/very_small"
            android:src="@drawable/ic_btn_next_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_see_full" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_game_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginBottom="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_game_poster" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginBottom="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_game_poster" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>