<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_to_normal"
    android:scrollbars="none"
    tools:context=".ui.detailsgame.DetailGamesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_to_large"
            android:background="@drawable/ic_backbtn"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_to_large"
            android:background="@drawable/bg_rect_home"
            android:fontFamily="@font/rubik_medium"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_game_posters"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            tools:src="@drawable/bg_apex_legends" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_game_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorBlackNormal"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_game_posters"
            tools:text="Apex Legends" />

        <View
            android:id="@+id/v_line_detail"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/very_small"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:background="@color/colorBlackLighter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title_detail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/genre"
            android:textColor="@color/colorBlackNormal"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_detail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorDarkPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_detail"
            tools:text="First Person Shooter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_birthdate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/developer"
            android:textColor="@color/colorBlackNormal"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorDarkPrimary"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            tools:text="Respawn Entertainment" />

        <View
            android:id="@+id/v_line_detail2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:background="@color/colorBlackLighter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birthdate_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:textAlignment="center"
            android:textColor="@color/colorBlackLighter"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_detail2"
            tools:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>